<resources>
    <string name="app_name">EngoLearn - تعلم أزمنة الأنجليزيه بسهوله</string>
    <string name="presnt_s">زمن المضارع البسيط</string>
    <string name="presnt_c">زمن المضارع المستمر</string>
    <string name="presnt_t">زمن المضارع التام</string>
    <string name="past_s">زمن الماضي البسيط</string>
    <string name="past_c">زمن الماضي المستمر</string>
    <string name="past_t">زمن الماضي التام</string>
    <string name="future_s">زمن المستقبل البسيط</string>
    <string name="future_c">زمن المستقبل المستمر</string>
    <string name="future_t">زمن المستقبل التام</string>
    <string name="word_if">قاعــده If</string>
    <string name="when_word">قاعده when</string>
    <string name="wait">قريبا تحديثات وشـروحات أكثر \n لتعلم الأنجليزيه</string>
    <string name="banner">ca-app-pub-2905685190226847/2723330171</string>
    <string name="share">share</string>
    <string name="privacy">Privacy policy</string>


    <string name="present_ss">
        يستخدم للتعبير عن : \n
        \n
1.  شئ يفعله الفاعل ( فى الجملة) كل فترة  بانتظام ( عادة يكررها الفاعل كل فترة) ، بطريقه أخري عاده للشخص المذكور في الجمله. \n
        \n
2. حقيقة عامة فى الكون أو حقيقة علمية ، شئ حقيقى ولا يتغير ابدا. \n
        \n
فمن المعروف ان  – القطط تحب اللبن  ،  وان – الشمس تشرق من الشرق  – \n
        \n
        فعند الكلام عن حقائق لا تتغير مثل هذه الحقائق ، فاننا نضع الفعل فى هذه الجمل فى زمن المضارع البسيط . \n
\n
3. اشياء حقيقية الان ومن المحتمل ان تستمر فى المستقبل ولكن لوقت غير معلوم لنا بالتحديد \n
مثلا : الجزار يبيع اللحوم ، والمدرس يعلم  التلاميذ \n مثلا أنا أعمل محاسب ، فهذا الحدث حقيقه الأن ومستمر في المستقبل ولكن لا أعرف متي سأترك العمل فهو يعتبر مستمر لوقت غير معلوم لنا \n
        \n
الكلمات الدالة على زمن المضارع البسيط \n
هناك كلمات عندما نجدها فى الجملة فاننا نضع الفعل  الموجود فى الجملة فى زمن المضارع البسيط  ، بمعني أنها دائما تستخدم في زمن المضارع البسيط ، وهى : \n

</string>

    <string name="present_after_ex">  ملاحظات : \n
      \n  هناك قائمه بكلمات مستخدمه في زمن المضارع البسيط ونصل لها من خلال الضغط على (الكلمات) في الأعلى \n \n
    وأيضا كلمة "Every" ومعناه كل ولكن هذه الكلمة تستخدم دائما مع ظرف زمان مثل \n
    (كل يوم - كل أسبوع - كل ليله - كل شهر) \n
        \n
        ملاحظه أخري : نستخدم كلمة (never) دائما مع النفي  \n
        مثل : \n
        \n
        Ali NEVER eats fish - علي لا يأكل السمك أبدا \n
        \n
        تستخدم كلمة (ever) دائما مع السؤال مثل:\n
        \n
        Do you EVER visit Egypt ? - هل قمت بزيارة مصر من قبل ؟ \n
        \n
        -أذا كان الفاعل في الجمله أسم جمع مثل (you - I - they - we)
        \n فنضع بعدهم مصدر الفعل \n
        \n
        -إذا كان الفاعل في الجمله أسم مفرد مثل (he - she - it)
        \n
        \n فنضع بعدهم مصدر الفعل ولكن مع أضافة حرف S \n
        في أخر الفعل وذلك مع معظم الأفعال\n
        مثل : drink - drinks \n
        \n
         -إذا كان الفعل ينتهي بـ (s - ss - sh - ch - o - x - z) نضيف له es بدلا من s \n
        مثل : (fix - fixes) - (watch - watches)
        \n
        \n
        -اذا كان الفعل ينتهي بـ (y) نضيف له ies مع حذف حرف y \n
        مثل : try - tries
        \n   \n   \n
        أنتهى الدرس
    </string>

    <string name="present_cc">نستخدم زمن المضارع المستمر للتعبير عن : \n \n حدث بدأ منذ فترة قليلة وهو مستمر فى الحدوث فى وقت كلامنا عنه ( الأن)،\n  فالحدث الان مازال مستمرا ولم يتوقف \n مثلا هم يبنون مدرسه جديده في شارعنا ، أخي يشاهد التلفاز \n
    \n تكوين زمن المضارع المستمر : \n (فاعل + فعل مساعد + الفعل في المصدر + ing ) \n \n
        الفعل المساعد مثل am - is - are \n\n
    \n وهناك كلمات نستخدمها دائما في زمن المضارع المستمر وهي :
    </string>

    <string name="present_ccc">ملاحظات : \n الأفعال التي تنتهي بحرف e عندها نضيف لها (ing) نقوم بحذف حرف e \n \n
    ثانيا : الأفعال التي تنتهي بحرف ساكن وقبله حرف متحرك مثل (run) \n عندها نضيف له (ing) نضاعف الحرف الأخير لتكون (running) \n \n
    اتمني أن يكون الشرح سهل وبسيط</string>

    <string name="present_tt"> زمن المضارع التام : \n \n هو الزمن الذي نستخدمه للتحدث عن حدثْ \n أو فعل حدثَ قبل فترة في الماضي وهذه الفترة غير محددة ( ربما لا نعرف متى حدث أو أنه من غير المهم ذكر متى حدث) \nوهذا الحدث مازالت آثاره ونتائجه متبقية إلى الآن.\n \n
  مثل : غسلت يدي لكي أساعدك علي تجهيز الطعام ، علي وجد القلم الذي كان يبحث عنه \n \n
    تكوين الجمله : فاعل + (has - have) + التصريف الثالث للفعل \n \n
        وهناك كلمات نستخدمها دائما في زمن المضارع التام وهي :
    </string>

    <string name="present_ttt"> ملاحظات : \n \n إذا جاء مع since فعل واحد يكون فى زمن المضارع التام \n \n أما إذا جاء مع since فعلين فالفعل الذى يلي since يكون ماضي بسيط و الآخر مضارع تام. \n \n مثال : I haven’t seen her since she left to London
        \n \n أنتهي الدرس

</string>

    <string name="past_ss">يستخدم في الأخبار عن أحداث حدثت وانتهت في الماضي \n \n وتتم صياغة الماضي البسيط عن طريق وضع التصريف الثاني للفعل \n \n وتنقسم الأفعال إلي قسمين \n \n
    1. الأفعال المنتظمه : \n وهي التي تتحول لماضي بأضافه (ed) لمصدر الفعل \n \n
        2. الأفعال الشاذه : \n وهي الأفعال التي لا تتبع أي قاعده والطريقه الوحيده لتحويلها في الماضي هي حفظ الأفعال كما هي. \n \n
    \n \n وهذه بعض الأفعال الشاذه للحفظ
    </string>

    <string name="past_sss"> قائمه الأفعال ستكون أكثر في تحديثات قادمه \n \n \n
        هناك أفعال تنتهي بحرف e وهذه الأفعال نضيف لها حرف d فقط \n مثل : prepare - prepared \n \n
    أما الأفعال التي تنتهي بحرف y فتنقسم لقسمين \n \n
    1. عندما يكون ساكن مثل (study) نحذف حرف y ونضيف (ied) لتكون studied \n 2. عندما يكون الحرف واضح في النطق مثل (play) نضيف ed للفعل لتكون (played) .</string>

    <string name="past_cc">يستخدم للتعبير عن حدث كان مستمر في وقت محدد أو قطعه حدث أخر \n \n مثلا : في الساعة الثامنة الليلة الماضية, أنا كنتُ أدرس \n \n في الساعة التاسعة الليلة الماضية كانت ندى تدرس في المكتبة. \n \n في الأمثله الماضيه كان الحدث في وقت محدد أما بالنسبه للحاله الثانيه وهي حدث كان مستمر وقطعه حدث آخر مثل : \n \n
    كنتُ أمشي إلى أسفل الشارع عندما بدأت تمطر. \n \n كان أخي و أختي يتجادلان بشأن شيءٍ ما عندما دخلتُ الغرفة \n \n هنا يوجد فعلان في الجمله \n عندما يكون لدينا فعلين في الماضي. أحدهما بدأ و استمر حتى حدث الآخر فقاطعه:  \n \n
الفعل الذي بدأ أولاً و استمر يكون زمنه : زمن الفعل الماضي المستمر .
\n \n
الفعل الذي حدث ثانياً و قاطع الأول يكون زمنه : ماضي بسيط.</string>

    <string name="past_ccc">يتكون زمن الماضي المستمر من ( فاعل + فعل مساعد وهم was مع المفرض و were مع الجمع + الفعل + ing ) \n \n
    At eight o’clock last night, I was studying. \n \n في الثامنه مساءً الليله الماضيه ,كنت أذاكر
    </string>

    <string name="past_tt">هو الزمن الذي يستخدم للتعبير عن حدث معين أو فعل معين وقع( قبل حدث آخر ) في الماضي ..
    \n \n
إذا لونلاحظ إنهم حدثين أو فعلين وكلهم في الماضي لكن واحد من الحدثين وقع قبل الآخر وهو حدث الماضي التام ثم الماضي البسيط .
    \n \n
مثلا / أنا أكلت التفاحة قبل ذهابي للمدرسة بالأمس .
    \n \n
إذا الحدثين هنا في الماضي وهما أكل التفاحة والذهاب للمدرسة
 لكن حدث سبق الآخر وهو أكل التفاحة .</string>

    <string name="past_ttt"> يتكون الجمله من فاعل + had + التصريف الثالث للفعل مثال/ \n \n
    I had eaten the apple before I went to school yesterday.
    \n \n لو نلاحظ هنا إن الحدثين وقعت في الماضي لكن الماضي التام سبق الماضي البسيط
\n
 فالحدث الأول هو أكل التفاحة والحدث الثاني وهو في الماضي البسيط هو الذهاب للمدرسة
\n
 .إذا الحدث الذي يسبق الحدث الآخر يكون في صيغة الماضي التام وأما الآخر ففي الماضي البسيط \n \n
ملاحظه : \n \n    أحيانا ليس من الضروري كتابة الحدثين في الجملة كما رأينا في المثال السابق
 لكن في بعض الصياغات تحذف الجملة التي في الماضي البسيط وبالمقابل
 نلاحظ أن عنصر الوقت متضمن ومفهوم من خلال الجملة ونفهم إن الجملة اللتي إنحذفت
 هي أصلا في صيغة الماضي البسيط  ، لتتعمق أكثر أضغط على أمثله</string>

    <string name="future_ss">يستخدم زمن المستقبل البسيط للتعبير أن شئ سيحدث في المستقبل البسيط أو البعيد \n \n مثلا أنا أردت أن أذهب للحديقه غدا ، صديقي سيقيم حفل زفافه الأسبوع القادم \n \n كل هذه تخطيطات لنشاطات سنقوم بها في المستقبل \n\n
    تكوينه : هناك طريقتان لتكوين الجمله في زمن المستقبل البسيط \n\n 1- فاعل + فعل مساعد [(am - is - are) + (going to)] + مصدر الفعل . \n \n مثال : He is going to visit USA \n \n 2- فاعل + will + مصدر الفعل. \n \n مثال : He will visit USA \n \n أضغط على أمثله لتتعمق أكثر ..
    </string>

    <string name="future_cc">
        يستخدم زمن المستقبل المستمر للتعبير عن حدث سوف يكون مستمر في وقت معين في المستقبل . \n \n مثلا : غدا في نفس هذا الوقت سأكون نائم . \n tomorrow at this time I will be sleeping. \n\n يتكون زمن المستقبل المستمر من الفعل المساعد (will be - shall be) ولكن shall تأتي مع الضمائر ( I - We ) فقط ، will تأتي مع كل الضمائر .
     \n \n will be + الفعل + ing \n \n نلاحظ ان الفعل في زمن المستقبل المستمر يصاغ مثل المضارع المستمر
        باضافه ing للفعل . \n \n أضغط على أمثله للتعمق أكثر .
    </string>

    <string name="future_tt">يستخدم في الأشاره إلى حدث معين سوف يكتمل وينتهي قبل حدث آخر ، بمعني أنه حدثين واحد منهم يسبق الآخر . \n\n مثلا : سأكون قد أنتهيت من العمل قبل أن تأتي . \n \n وهنا نقوم بكتابه الحدث الأول في زمن المستقبل التام والحدث الذي يليه في زمن المضارع البسيط ، \n \n ودائما تجد في زمن المستقبل التام جمله منهم زمنيه مثل : \n
    (by - before - after - when - by the time) \n \n طبعا نعلم ان جمله المضارع البسيط ستتكون من الفاعل والفعل في المصدر ، \n \n جمله المستقبل التام تتكون من /
    فاعل + (will + have) + التصريف الثالث للفعل \n \n مثال : I will have finished my work before you come .
    \n \n أضغط ع أمثله لتتعمق أكثر </string>


</resources>
